<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileFragment"
    android:background="@color/backgroundWhite"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato"
        android:text="@string/my_profile"
        android:textColor="@color/darkGray"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/profile" />

    <Button
        android:id="@+id/button_editavatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/edit_avatar"
        android:textSize="11sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_statistics"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/notifications" />

        <Switch
            android:id="@+id/switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:thumbTint="@color/yellow"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_statistics"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="140dp"
                android:text="@string/dark_mode" />

            <Switch
                android:id="@+id/switch_mode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:thumbTint="@color/yellow"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_statistics"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="120dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/location_Poland"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_statistics"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="140dp"
                android:text="@string/language_app" />

            <Button
                android:id="@+id/button_changeMyLang"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/change"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_editprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:text="@string/edit_profile" />

            <Button
                android:id="@+id/button_statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/my_statistics" />
        </LinearLayout>

        <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="500dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/logout" />
    </RelativeLayout>

</FrameLayout>