<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/shape_statistics"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:paddingVertical="12sp"
            android:paddingStart="20sp"
            android:textColorHint="@color/lightGray"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_statistics"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingVertical="12sp"
            android:paddingStart="20sp"
            android:textColorHint="@color/lightGray"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_statistics"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:paddingVertical="12sp"
            android:paddingStart="20sp"
            android:textColorHint="@color/lightGray"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/next_btn_level_test"
        android:backgroundTint="@color/yellow"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_go_back"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="700dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/next_btn_level_test"
        android:backgroundTint="@color/yellow"
        android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/go_back"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>