<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMint"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="30sp">

    <ImageView
        android:id="@+id/fingerprintImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_baseline_fingerprint_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_your_password"
        android:textColor="@color/darkGray"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/shape"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingVertical="12sp"
            android:paddingStart="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGray"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="40sp"
        android:background="@drawable/shape2"
        android:gravity="center"
        android:orientation="horizontal"
        android:textColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_go_back"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/shape2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/go_back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>