<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryTestFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/lato"
            android:text="@string/select"
            android:textColor="@color/darkGray"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="318dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/home2" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="450dp"
            android:fontFamily="@font/lato"
            android:text="@string/category_test"
            android:textColor="@color/darkGray"
            android:textSize="22sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/next_btn_quiz"
        android:backgroundTint="@color/peach"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/category_test_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</FrameLayout>